--- a/_views/form.html
+++ b/_views/form.html
@@ -12,7 +12,7 @@
   </style>
   <body>
     <p>Hello,</p>
-    <p>Day la form danh gia thu viec (<%= emailAddress %>). If you requested this reset, click the link below to reset your password:</p>
+    <p>Day la form danh gia thu viec (<%= content %>). If you requested this reset, click the link below to reset your password:</p>
     <p><a href="<%= resetLink %>">Reset Your Password</a></p>
   </body>
 </html>
