--- a/_public/_views/form2.html
+++ b/_public/_views/form2.html
@@ -12,7 +12,7 @@
   </style>
   <body>
     <p>Hello,</p>
-    <p>Day la form danh gia dinh ky (<%= content %>). If you requested this reset, click the link below to reset your password:</p>
-    <p><a href="<%= resetLink %>">Reset Your Password</a></p>
+    <p>(<%= content %>)</p>
+  
   </body>
 </html>
